crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__set_evaluation_order.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/set_evaluation_order.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `undefined2`.
   ╭─[craftinginterpreters/test/field/set_evaluation_order.lox:2:5]
   │
 2 │   = undefined2;
   │     ──────────  
───╯
